base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-dep
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-dep
  template:
    metadata:
      labels:
        app: frontend-dep
    spec:
      containers:
        - name: frontend
          image: "trnproj1.azurecr.io/frontend@sha256"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
