base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: Demo-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: backend-dep
