base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: demo-app
spec:
  ports:
    - port: 80
      nodePort: 31215
      targetPort: 8080
      protocol: TCP
  selector:
    app: frontend-dep
